Working JavaFX with SwingNode canvas