@@ -4,16 +4,13 @@ import org.jzy3d.chart.AWTNativeChart;
 import org.jzy3d.colors.Color;
 import org.jzy3d.colors.ColorMapper;
 import org.jzy3d.colors.colormaps.ColorMapRainbow;
-import org.jzy3d.events.IViewEventListener;
-import org.jzy3d.events.ViewIsVerticalEvent;
-import org.jzy3d.javafx.controllers.mouse.JavaFXCameraMouseController;
 import org.jzy3d.javafx.offscreen.JavaFXOffscreenChartFactory;
-import org.jzy3d.javafx.offscreen.JavaFXOffscreenRenderer3d;
 import org.jzy3d.maths.Range;
 import org.jzy3d.plot3d.builder.Mapper;
 import org.jzy3d.plot3d.builder.SurfaceBuilder;
 import org.jzy3d.plot3d.primitives.Shape;
 import org.jzy3d.plot3d.rendering.canvas.Quality;
+import com.jogamp.opengl.GLProfile;
 import javafx.application.Application;
 import javafx.scene.Scene;
 import javafx.scene.image.ImageView;
@@ -21,36 +18,24 @@ import javafx.scene.layout.StackPane;
 import javafx.stage.Stage;
 
 /**
- * Showing how to pipe an offscreen Jzy3d chart image to a JavaFX ImageView.
+ * Will require JDK17, Gluon's JavaFX 19 in classpath
  * 
- * {@link JavaFXOffscreenChartFactory} delivers dedicated {@link JavaFXCameraMouseController} and
- * {@link JavaFXOffscreenRenderer3d}
- * 
- * Support Rotation control with left mouse button hold+drag Scaling scene using mouse wheel
- * Animation (camera rotation with thread)
- * 
- * TODO : Mouse right click shift Keyboard support (rotate/shift, etc)
+--module-path /Users/martin/Dev/javafx-sdk-19/lib --add-modules javafx.controls -Dnativewindow.debug.JAWT --add-exports=java.desktop/sun.awt=ALL-UNNAMED
  * 
  * 
- * Will run on OpenJDK8, require jxfrt.jar to be available
  * 
  * @author Martin Pernollet
  */
-public class DemoJzy3dFX_OpenJDK8 extends Application {
-  public static Application app;
-  
+public class DemoJavaFX_Offscreen_Gluon19 extends Application {
   public static void main(String[] args) {
     Application.launch(args);
-    
-    
   }
-     
 
   @Override
   public void start(Stage stage) {
-    app = this;
+    GLProfile.initSingleton();
     
-    stage.setTitle(DemoJzy3dFX_OpenJDK8.class.getSimpleName());
+    stage.setTitle(DemoJavaFX_Offscreen_Gluon19.class.getSimpleName());
 
     // Jzy3d
     JavaFXOffscreenChartFactory factory = new JavaFXOffscreenChartFactory();
@@ -61,37 +46,15 @@ public class DemoJzy3dFX_OpenJDK8 extends Application {
     StackPane pane = new StackPane();
     Scene scene = new Scene(pane);
     stage.setScene(scene);
-    pane.getChildren().add(imageView);
     stage.show();
+    pane.getChildren().add(imageView);
+
 
     factory.addSceneSizeChangedListener(chart, scene);
-    
 
-    // DO THIS AFTER START, at this step, window is not displayed!
     stage.setWidth(500);
     stage.setHeight(500);
-    stage.setWidth(500);
-    stage.setHeight(700);
     
-    //chart.getView().setMa
-    //stage.set
-    //stage.setWidth(499);
-    
-    //chart.render(100);
-
-    chart.getView().addViewEventListener(new IViewEventListener() {
-      @Override
-      public void viewFirstRenderStarts() {
-      }
-      @Override
-      public void viewVerticalReached(ViewIsVerticalEvent e) {
-      }
-      @Override
-      public void viewVerticalLeft(ViewIsVerticalEvent e) {
-      }
-      
-    });
-
 
   }
 
@@ -112,21 +75,22 @@ public class DemoJzy3dFX_OpenJDK8 extends Application {
     // Create the object to represent the function over the given range.
     final Shape surface = new SurfaceBuilder().orthonormal(mapper, range, steps);
     surface.setColorMapper(new ColorMapper(new ColorMapRainbow(), surface.getBounds().getZmin(),
-        surface.getBounds().getZmax(), new Color(1, 1, 1, .95f)));
+        surface.getBounds().getZmax(), new Color(1, 1, 1, .5f)));
     surface.setFaceDisplayed(true);
     surface.setWireframeDisplayed(false);
 
     // -------------------------------
     // Create a chart
     Quality quality = Quality.Advanced();
-    //quality.setAnimated(true);
-    
-    //System.out.println(quality.isAnimated());
+    // quality.setSmoothPolygon(true);
+    // quality.setAnimated(true);
 
     // let factory bind mouse and keyboard controllers to JavaFX node
     factory.getPainterFactory().setOffscreen(800, 600);
     AWTNativeChart chart = (AWTNativeChart) factory.newChart(quality);
+    //chart.getView().setAxisDisplayed(false);
     chart.getScene().getGraph().add(surface);
+    
     return chart;
   }
 }
